After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 638867 - git master doesn't build against gnome-desktop-3
git master doesn't build against gnome-desktop-3
Status: RESOLVED FIXED
Product: gnome-screensaver
Classification: Deprecated
Component: general
CVS HEAD
Other Linux
: Normal blocker
: ---
Assigned To: gnome-screensaver maintainers
gnome-screensaver maintainers
Depends on:
Blocks:
 
 
Reported: 2011-01-06 21:39 UTC by Wouter Bolsterlee (uws)
Modified: 2011-01-07 20:45 UTC
See Also:
GNOME target: 3.0
GNOME version: ---


Attachments
Proposed fix (1.03 KB, patch)
2011-01-06 21:42 UTC, Wouter Bolsterlee (uws)
committed Details | Review

Description Wouter Bolsterlee (uws) 2011-01-06 21:39:22 UTC
make[3]: Entering directory `/home/uws/Projects/Gnome/Development/src/gnome-screensaver/src'
  CC     gs-fade.o
gs-fade.c: In function ‘check_randr_extension’:
gs-fade.c:577: error: too many arguments to function ‘gnome_rr_screen_new’
gs-fade.c: In function ‘gs_fade_finalize’:
gs-fade.c:910: warning: implicit declaration of function ‘gnome_rr_screen_destroy’
gs-fade.c:910: warning: nested extern declaration of ‘gnome_rr_screen_destroy’
make[3]: *** [gs-fade.o] Error 1
make[3]: Leaving directory `/home/uws/Projects/Gnome/Development/src/gnome-screensaver/src'
Comment 1 Wouter Bolsterlee (uws) 2011-01-06 21:40:26 UTC
It seems GnomeRRScreen is a fully featured GObject nowadays - see bug #630913 for more information.
Comment 2 Wouter Bolsterlee (uws) 2011-01-06 21:42:01 UTC
Created attachment 177707 [details] [review]
Proposed fix

Adapt to new constructor API and use g_object_unref instead of the (now dropped) custrom destroy function.
Comment 3 Matthias Clasen 2011-01-07 13:40:07 UTC
Looks good to me
Comment 4 Matthias Clasen 2011-01-07 14:16:17 UTC
Review of attachment 177707 [details] [review]:

Can you bump the required gnome-desktop version while committing this ?
Comment 5 Matthias Clasen 2011-01-07 15:13:45 UTC
I've committed it now.