Fix the build with recent gnome-desktop

And bump the gnome-desktop requirement to 2.91.5.
Patch by Giovanni Campagna;
https://bugzilla.gnome.org/show_bug.cgi?id=638867